--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 		  <a class="navbar-brand" href="#">
         
       </a>
-		  <a class="navbar-brand" href="Index.html" style="color:white">Portfolio Johan Bos</a>
+		  <a class="navbar-brand" href="./index.html" style="color:white">Portfolio Johan Bos</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="Index.html">Home</a></li>
+            <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="OverMij.html">Over Mij</a></li>
             <li><a href="Portfolio.html">Portfolio</a></li>
 			<li><a href="Contact.html">Contact</a></li>
