--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="OverMij.html">Over Mij</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-			<li><a href="Contact.html">Contact</a></li>
+            <li><a href="./OverMij.html">Over Mij</a></li>
+            <li><a href="./Portfolio.html">Portfolio</a></li>
+			<li><a href="./Contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
