--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-		  <a class="navbar-brand" href="Index.html" style="color:white">Portfolio Johan Bos</a>
+		   <a class="navbar-brand" href="./index.html" style="color:white">Portfolio Johan Bos</a>
         </div>
-                <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="Index.html">Home</a></li>
-            <li><a href="OverMij.html">Over Mij</a></li>
-            <li class="active"><a href="Portfolio.html">Portfolio</a></li>
-			<li><a href="Contact.html">Contact</a></li>
+            <li class="active"><a href="./index.html">Home</a></li>
+            <li><a href="./overMij.html">Over Mij</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+			<li><a href="./contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
