--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="./overMij.html">Over Mij</a></li>
             <li><a href="./portfolio.html">Portfolio</a></li>
-			<li><a href="./contact.html">Contact</a></li>
+			<li class="active"><a href="./contact.html">Contact</a></li>
           </ul>
         </div>><!--/.nav-collapse -->
       </div>
