--- a/overMij.html
+++ b/overMij.html
@@ -26,8 +26,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="./overMij.html">Over Mij</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li class="active"><a href="./overMij.html">Over Mij</a></li>
             <li><a href="./portfolio.html">Portfolio</a></li>
 			<li><a href="./contact.html">Contact</a></li>
           </ul>
