--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <li><a href="./portfolio.html">Portfolio</a></li>
 			<li class="active"><a href="./contact.html">Contact</a></li>
           </ul>
-        </div>><!--/.nav-collapse -->
+        </div><!--/.nav-collapse -->
       </div>
     </nav>
 
@@ -43,9 +43,9 @@
 		 <address>
 		 <h1>Adress Gegevens</h1>
 	<p class="lead">
-	Email:<a href="mailto:00099743@student.rocleiden.nl">JohanBos@gmail.com</a>.<br> 
+	Email:<a href="mailto:johanbos1995@gmail.com">johanbos1995@gmail.com</a>.<br> 
 	Naam: Johan Bos<br>
-	Website: JohanBos.github.io<br>
+	Website: <a href="http://johanbos1995.github.io/index.html">johanbos1995.github.io</a><br>
 	Land: Nederland
 	</p>
 </address>
