--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 		<br>
         <p class="lead">
 		Welkom <br><br>
-		Dit is mijn portfolio website
-		Op deze website vind je de projecten waar ik trots op ben
-		Dus niet alles staat op deze website wilt u meer projecten zien neem dan contact met me op</p>
+		Dit is mijn portfolio website.
+		Op deze website vind je de projecten waar ik trots op ben.
+		Niet alles staat op deze website, wilt u meer projecten bekijken neem dan contact op met mij</p>
       </div>
 	  
 	</div>
