--- a/overMij.html
+++ b/overMij.html
@@ -47,17 +47,17 @@
 		Ik ben geboren in Woerden in 1995.<br>
 		</p>
 		<br>
-		<h1>Ik heb heel veel intresess en hobbies</h1>
+		<h1>Ik heb heel veel interesses en hobbies</h1>
 		<p class="lead">
-		Zoals: Programmeren, Gamen en Films/Muziek en meer.
+		Zoals: Programmeren, Gamen en Films/Muziek en nog meer.
 		</p>
 		<br>
 		<h1>School</h1>
 		<p class="lead">
-		Ik zit op ROC Leiden(Applicatie ontwikkelaar)<br><br>
+		Ik zit op het ROC Leiden(Applicatie ontwikkelaar)<br><br>
 		Deze scholen heb ik gevolgd/Ben ik mee bezig <br>
 		Johannes de Doper school (basis school)<br>
-		Alkwin College (Havo/VWO)<br>
+		Alkwin College (HAVO/VWO)<br>
 		Ashram College Nieuwkoop (Vbmo-t)<br>
 		ROC Leiden (MBO-Applicatie Ontwikkelaar)<br>
 		</p>
@@ -66,7 +66,7 @@
 		
 		<h1>Ik heb kennis in/mee gewerkt met</h1> 
 		<p class="lead">
-		Programmeer/Markup languages : Html, Css, Javascript, Php , Java <br>
+		Programmeer/Markup languages : Html, Css, Javascript, Php, Mysql, Java <br>
 		Framework : Codeigniter, Laravel <br>
 		CMS : Wordpress, Joomla <br>
 		</p>
