--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,13 @@
 	  <h1>Portfolio</h1>
  <br>
  
-  <h1>Hier staat alle belangerijke opdrachten van school en een paar gewoon geprogrammeerd als hobby</h1>
+  <h1>Hier staan alle belangerijke opdrachten van school en een paar geprogrammeerde programma's als hobby</h1>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
       <img src="ClickerGame.png" alt="ClickerGame">
       <div class="caption">
         <h3>Clicker Clone (Hobby)</h3>
-        <p>Ik heb geprobeerd om een click game te maken omdat het zo razend populair was de laatste tijd wil je tijd verdoen klik dan op de knop hieronder om het te spelen</p>
+        <p>Ik heb geprobeerd om een click game te maken, omdat het zo razend populair was de laatste tijd. Als je wilt spelen klik dan op de knop hieronder</p>
         <p><a href="http://00099743.github.io/" class="btn btn-primary" target="blank" role="button">Go to website/Play</a></p>
       </div>
     </div>
@@ -61,7 +61,7 @@
       <img src="PortfolioWebsiteSchool.jpg" alt="PortfolioWebsiteSchool">
       <div class="caption">
         <h3>Portfolio Website (School)</h3>
-        <p>Portfolio website die ik gemaakt heb in wordpress was een opdracht voor school</p>
+        <p>Portfolio website die ik gemaakt heb in wordpress dit was een opdracht voor school</p>
         <p><a href="https://am99743.wordpress.com/" class="btn btn-primary"  target="blank" role="button">Go to website</a></p>
       </div>
     </div>
@@ -72,8 +72,8 @@
     <div class="thumbnail">
       <img src="..." alt="...">
       <div class="caption">
-        <h3>Unwings(CMS)(Still in Develpmont)</h3>
-        <p>CMS voor webshops nog steeds in develpmont gemaakt in codeigniter </p>
+        <h3>Unwings(CMS)(Still in development)</h3>
+        <p>CMS voor webshops nog steeds in development gemaakt in codeigniter </p>
         <p><a href="http://johanbos1995.github.io/Unwings/" class="btn btn-primary" role="button">Go to project page</a></p>
       </div>
     </div>
