--- a/overMij.html
+++ b/overMij.html
@@ -49,7 +49,7 @@
 		<br>
 		<h1>Ik heb heel veel interesses en hobbies</h1>
 		<p class="lead">
-		Zoals: Programmeren, Gamen en Films/Muziek en nog meer.
+		Zoals: programmeren, gamen en films/muziek en nog meer.
 		</p>
 		<br>
 		<h1>School</h1>
